[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/title.png" type="Texture" id=1]
[ext_resource path="res://sprites/sound.png" type="Texture" id=2]
[ext_resource path="res://sprites/start.png" type="Texture" id=3]
[ext_resource path="res://sprites/score.png" type="Texture" id=4]
[ext_resource path="res://scripts/welcome.gd" type="Script" id=5]
[ext_resource path="res://sprites/help.png" type="Texture" id=6]
[ext_resource path="res://scenes/cloud.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/soundOff.png" type="Texture" id=8]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/particleUtil.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/spawnblock.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/scoreDotutil.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/leaderboard.png" type="Texture" id=13]
[ext_resource path="res://sprites/home.png" type="Texture" id=14]
[ext_resource path="res://sprites/achievements.png" type="Texture" id=15]
[ext_resource path="res://sprites/pause.png" type="Texture" id=16]
[ext_resource path="res://scenes/colorDotutil.tscn" type="PackedScene" id=17]
[ext_resource path="res://sprites/pausePlay.png" type="Texture" id=18]
[ext_resource path="res://sprites/pauseRestart.png" type="Texture" id=19]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=20]
[ext_resource path="res://scenes/TextureButton.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
resource_name = "help"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ui/title:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("camera:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 240 ), Vector2( 160, 300 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/btnHelp2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 252, 229 ), Vector2( 320, 229 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/btnStart2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 73, 190 ), Vector2( 320, 190 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ui/btnScore2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 237, 397 ), Vector2( 320, 397 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ui/btnMain2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 500 ), Vector2( 3, 394 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ui/btnSound2:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 394 ), Vector2( 3, 500 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ui/btnStart2:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1

[sub_resource type="Animation" id=3]
resource_name = "newScore"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("camera:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/btnSound2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 500 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/btnHelp2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 229 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ui/btnScore2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 397, 397 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ui/btnStart2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 190 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ui/btnStart2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "newScoreBack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("camera:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 300 ), Vector2( 160, 240 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/btnSound2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 500 ), Vector2( 3, 394 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/btnHelp2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 229 ), Vector2( 252, 229 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ui/btnScore2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 397 ), Vector2( 237, 397 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ui/btnStart2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 190 ), Vector2( 73, 190 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ui/btnStart2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ui/btnRestart2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 500 ), Vector2( 120, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/btnResume2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 200 ), Vector2( 200, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/btnMain2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 500 ), Vector2( 40, 200 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/btnPause2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("player/player:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/btnMain2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 500 ), Vector2( 3, 394 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/btnScore2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 237, 397 ), Vector2( 237, 500 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ui/btnSound2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 394 ), Vector2( 3, 500 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ui/btnRank2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 400 ), Vector2( 237, 400 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ui/btnNet2:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 400 ), Vector2( 157, 400 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ui/btnStart2:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 73, 190 ), Vector2( 320, 190 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ui/btnStart2:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ui/btnHelp2:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 252, 229 ), Vector2( 320, 229 ), Vector2( 320, 229 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("camera:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 240 ), Vector2( 160, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/btnStart2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/btnScore2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ui/btnSound2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ui/btnHelp2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ui/btnPause2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="welcome" type="Node2D"]
z_index = 1
script = ExtResource( 5 )

[node name="ui" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="title" type="Sprite" parent="ui"]
position = Vector2( 30, 60 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
centered = false

[node name="author" type="Label" parent="ui"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -42.5
margin_right = 50.0
margin_bottom = 42.5
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.372549, 0.388235, 0.501961, 1 )
text = "The end

Created by  
eric zingeler"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnHelp2" parent="ui" instance=ExtResource( 21 )]
margin_left = 252.0
margin_top = 229.0
margin_right = 306.0
margin_bottom = 283.0
texture_normal = ExtResource( 6 )

[node name="btnStart2" parent="ui" instance=ExtResource( 21 )]
margin_left = 73.0
margin_top = 190.0
margin_right = 247.0
margin_bottom = 290.0
texture_normal = ExtResource( 3 )

[node name="btnSound2" parent="ui" instance=ExtResource( 21 )]
margin_left = 3.0
margin_top = 394.0
margin_right = 83.0
margin_bottom = 474.001
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )

[node name="btnScore2" parent="ui" instance=ExtResource( 21 )]
margin_left = 237.0
margin_top = 397.0
margin_right = 317.0
margin_bottom = 477.0
texture_normal = ExtResource( 4 )

[node name="btnRank2" parent="ui" instance=ExtResource( 21 )]
margin_left = 320.0
margin_top = 400.0
margin_right = 400.0
margin_bottom = 480.0
texture_normal = ExtResource( 15 )

[node name="btnMain2" parent="ui" instance=ExtResource( 21 )]
margin_left = 3.0
margin_top = 500.0
margin_right = 83.0
margin_bottom = 580.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 14 )

[node name="btnNet2" parent="ui" instance=ExtResource( 21 )]
margin_left = 400.0
margin_top = 400.0
margin_right = 480.0
margin_bottom = 480.0
texture_normal = ExtResource( 13 )

[node name="btnPause2" parent="ui" instance=ExtResource( 21 )]
visible = false
margin_left = 256.0
margin_right = 316.0
margin_bottom = 60.0
texture_normal = ExtResource( 16 )

[node name="btnResume2" parent="ui" instance=ExtResource( 21 )]
margin_left = 320.0
margin_top = 200.0
margin_right = 400.0
margin_bottom = 280.0
texture_normal = ExtResource( 18 )

[node name="btnRestart2" parent="ui" instance=ExtResource( 21 )]
margin_left = 120.0
margin_top = 500.0
margin_right = 200.0
margin_bottom = 580.0
texture_normal = ExtResource( 19 )

[node name="bg" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="bg"]
margin_right = 320.0
margin_bottom = 480.0
mouse_filter = 2
color = Color( 0.627451, 0.819608, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cloud" parent="bg" instance=ExtResource( 7 )]
position = Vector2( 92.342, 86.4005 )

[node name="cloud2" parent="bg" instance=ExtResource( 7 )]
position = Vector2( 229.427, 183.097 )
angle = -1

[node name="block" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="particleUtil" parent="block" instance=ExtResource( 10 )]
pause_mode = 2
z_index = 1

[node name="spawnblock" parent="block" instance=ExtResource( 11 )]

[node name="player" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="player" parent="player" instance=ExtResource( 9 )]
position = Vector2( 120, 352 )
z_index = 1

[node name="dot" type="CanvasLayer" parent="."]
layer = 2

[node name="scoreDotutil" parent="dot" instance=ExtResource( 12 )]

[node name="colorDotUtil" parent="dot" instance=ExtResource( 17 )]

[node name="camera" type="Camera2D" parent="."]
offset = Vector2( 160, 240 )
current = true

[node name="ani" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/help = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/newScore = SubResource( 3 )
anims/newScoreBack = SubResource( 4 )
anims/pause = SubResource( 5 )
anims/score = SubResource( 6 )
anims/start = SubResource( 7 )

[node name="gameOverTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="colorTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 20.0

[node name="gamePassTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true
[connection signal="_pressed" from="ui/btnHelp2" to="." method="_on_btnHelp2__pressed"]
[connection signal="_pressed" from="ui/btnStart2" to="." method="_on_btnStart2__pressed"]
[connection signal="_pressed" from="ui/btnSound2" to="." method="_on_btnSound2__pressed"]
[connection signal="_pressed" from="ui/btnScore2" to="." method="_on_btnScore2__pressed"]
[connection signal="_pressed" from="ui/btnMain2" to="." method="_on_btnMain2__pressed"]
[connection signal="_pressed" from="ui/btnPause2" to="." method="_on_btnPause2__pressed"]
[connection signal="_pressed" from="ui/btnResume2" to="." method="_on_btnResume2__pressed"]
[connection signal="_pressed" from="ui/btnRestart2" to="." method="_on_btnRestart2__pressed"]
